# open-kilda

./: .directory  .editorconfig  .env.example  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Jenkinsfile  Jenkinsfile.local  Makefile  README.md  Vagrantfile  bitbucket-pipelines.yml  build.sh  config.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: mega-linter.yml  sonargate.yml  unittest.yml
.hooks/: pre-commit
base/: build-base.sh
base/base-builder/: Dockerfile  Makefile
base/base-floodlight/: Dockerfile
base/base-java/: Dockerfile  Makefile  README.md
base/base-maven/: Dockerfile  Makefile
base/hacks/: ensure.buildtools.sh  kilda-bins.download.sh  kilda-bins.requirements.txt  load_kilda_dev_ubuntu.sh  storm.requirements.download.sh
base/kilda-base-lab-service/: Dockerfile
base/kilda-base-python3/: Dockerfile
base/kilda-base-ubuntu/: Dockerfile
confd/conf.d/: atdd-staging.kilda_properties.toml  atdd-staging.log4j2.toml  base-storm-topology.topologies.toml  blue-storm-topology.topologies.toml  connecteddevices-topology.topology_definition.toml  docker-compose_yaml.toml  floodlight.floodlightkilda.toml  floodlight.floodlightkildaStats.toml  floodlight.logback.toml  floodlightrouter-topology.topology_definition.toml  flowhs-topology.topology_definition.toml  flowmonitoring-topology.topology_definition.toml  fuctional-tests.kilda_properties.toml  functional-tests.log4j2.toml  green-storm-topology.topologies.toml  grpc_speaker.grpc_service_properties.toml  grpc_speaker.log4j2.toml  gui.application.toml  gui.logback.toml  history-topology.topology_definition.toml  isllatency-topology.topology_definition.toml  kafka.server_properties.toml  lab_service.log.toml  logstash.conf.toml  makefile.toml  mininet.log.toml  nbworker-topology.topology_definition.toml  network-topology.topology_definition.toml  northbound.log4j2.toml  northbound.northbound_properties.toml  opentsdb-topology.topology_definition.toml  perf-tests.kilda_properties.toml  ping-topology.topology_definition.toml  portstate-topology.topology_definition.toml  reroute-topology.topology_definition.toml  server42-control-server-stub.application_properties.toml  server42-control-server-stub.log4j2.toml  server42-control-storm-stub.application_properties.toml  server42-control-storm-stub.log4j2.toml  server42-control-topology.topology_definition.toml  (+18 more)
confd/vars/: blue-mode.yaml  docker-compose.yaml  green-mode.yaml  main.yaml  test-vars.yaml
controller/: Dockerfile  README.md  pom.xml  project.sh
docker/: .gitignore  libs.sh
docker/atdd-staging/: Dockerfile
docker/confd/: Dockerfile
docker/db-migration/: Dockerfile  apply-prehistory-migrations.sh  migrate-develop.sh  migrate.sh
docker/db-mysql-migration/: Dockerfile  libs.sh  migrate-develop.sh
docker/elasticsearch/: Dockerfile  jvm.options
docker/floodlight-modules/: Dockerfile  Makefile  entrypoint.sh
docker/grpc-service/: Dockerfile
docker/grpc-stub/: Dockerfile
docker/hbase/: Dockerfile
docker/kafka/: Dockerfile
docker/lab-service/: Dockerfile  run.sh
docker/lock-keeper/: Dockerfile
docker/logstash/: Dockerfile  Dockerfile.example  simple-logstash-healthcheck.sh
docker/neo4j/: Dockerfile
docker/northbound/: Dockerfile
docker/opentsdb/: Dockerfile
docker/server42/: Dockerfile
docker/snmp-collector/: Dockerfile
docker/storm/: .gitignore  Dockerfile  simple-storm-healthcheck.sh  simple-storm-supervisor-healthcheck.sh  simple-storm-ui-healthcheck.sh
docker/wfm/: Dockerfile
docker/zookeeper/: Dockerfile
docs/: README  README.md
docs/blueprints/: README
docs/contrib/: memo_for_contributors.rst  workflow.md
docs/design/: README  README.MD  kafka.md  kilda-speaker-outage-issues.md  llgen-traffic-generation-tool.md  path-computation.md
docs/design/server42/src/server42_mk3/: CMakeLists.txt  build_debug.sh  build_release.sh  install_requirements.sh
docs/design/server42/src/server42_mk3/include/server42/: EchoThread.h  FlowPool.h  Payload.h  ProcessThread.h  ReadThread.h  WriteThread.h  control.proto  statistics.proto
docs/design/server42/src/server42_mk3/src/: DpdkDeviceList.cpp.patch01  EchoThread.cpp  FlowPoolTest.cpp  ProcessThread.cpp  ReadThread.cpp  WriteThread.cpp  echo-server42.cpp  server42.cpp
docs/gui/: ApacheDerbyToMySQLMigration.md
docs/guidelines/: api-guidelines.md  logging-conventions.md  project-structure-conventions.md
docs/releases/: 0.9.md
kilda-bins/: apache-storm-1.1.0.tar.gz.md5  hbase-1.2.4-bin.tar.gz.md5  kafka_2.12-0.10.2.1.tgz.md5  zookeeper-3.4.9.tar.gz.md5
services/: .dockerignore
services/elasticsearch/: Dockerfile  jvm.options
services/floodlight/: Dockerfile
services/hbase/: Dockerfile
services/hello-world/: Dockerfile  variables.env
services/kafka/: Dockerfile
services/lab-api/: Dockerfile
services/lab-service/: .gitignore  Dockerfile  README.md  run.sh
services/llgen/: .gitignore  Makefile  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
services/lock-keeper/: Dockerfile  README.md  lockkeeper.py
services/logstash/: .gitignore  Dockerfile
src-cpp/server42/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.prebuild  Dockerfile.protobuf  README.md  build.sh  build_debug.sh  build_docker.sh  build_release.sh  docker_entrypoint.py  docker_install_requirements.sh  generate_java_protobuf.sh  host_install_requirements.sh  local_loop.sh
src-cpp/server42/src/: Config.cpp  Config.h  Control.cpp  Control.h  DpdkCoreThread.cpp  DpdkCoreThread.h  DumpStats.cpp  DumpStats.h  FlowId.h  FlowMetadata.h  FlowPool.h  FlowPoolTest.cpp  IslId.h  IslMetadata.h  PacketGenerator.cpp  PacketGenerator.h  PacketPool.h  Payload.h  SharedContext.h  Workers.cpp  Workers.h  control.proto  flow-rtt-control.proto  isl-rtt-control.proto  server42.cpp  statistics.proto
src-gui/: .gitignore  Dockerfile  Makefile  README.md  README.user.releases.md  build.gradle  docker-compose.yml  pom.xml  settings.gradle
src-java/: .gitignore  build.gradle  gradle.properties  pom.xml  settings.gradle
(+13075 files in other folders)
